static/style.css
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

body{
    background:#020712;
    color:white;
    overflow:hidden;

    font-family:Arial, Helvetica, sans-serif;
}

/* CONNECT PAGE */

.connect-page{
    width:100%;
    height:100vh;

    display:flex;
    justify-content:center;
    align-items:center;

    background:#020712;
}

/* CARD */

.connect-card{
    width:430px;

    background:#08101d;

    border:1px solid rgba(255,255,255,.05);

    border-radius:28px;

    padding:40px;

    box-shadow:
    0 0 30px rgba(0,255,255,.03);

    transform:scale(.88);
}

/* LOGO */

.logo{
    font-family:'Orbitron',sans-serif;

    font-size:50px;

    line-height:.8;

    margin-bottom:20px;

    letter-spacing:1px;

    white-space:nowrap;
}
.redx{
    color:#ff2f74;

    text-shadow:
    0 0 10px #ff2f74,
    0 0 20px #ff2f74;
}

/* DESC */

.desc{
    color:#7c89a5;

    margin-bottom:28px;

    font-size:15px;

    letter-spacing:1px;

    font-family:'Orbitron',sans-serif;
}

/* LABEL */

label{
    display:block;

    margin-top:22px;
    margin-bottom:10px;

    color:#7c89a5;

    letter-spacing:4px;

    font-size:12px;

    font-family:'Orbitron',sans-serif;
}

/* INPUT */

.connect-card input{
    width:100%;

    padding:16px;

    border:none;
    outline:none;

    border-radius:16px;

    background:#020712;

    color:white;

    font-size:16px;
}

.connect-card input::placeholder{
    color:#6d7690;
}

/* SMALL TEXT */

.small{
    margin-top:20px;

    color:#7c89a5;

    line-height:1.7;

    font-size:11px;

    font-family:'Orbitron',sans-serif;
}

/* BUTTON */

.connect-card button{
    width:100%;

    margin-top:28px;

    padding:18px;

    border:none;

    border-radius:18px;

    background:#19d3ff;

    color:black;

    font-size:24px;

    font-weight:bold;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;

    letter-spacing:4px;

    transition:.3s;
}

.connect-card button:hover{
    transform:scale(1.02);
}

/* CHAT PAGE */

.chat-page{
    display:none;

    width:100%;
    height:100vh;

    background:#020712;

    overflow:hidden;
}

/* TOPBAR */

.topbar{
    width:100%;
    height:80px;

    border-bottom:1px solid rgba(255,255,255,.05);

    display:flex;
    justify-content:space-between;
    align-items:center;

    padding:0 30px;
}

/* ROOM TEXT */

.roomtext{
    color:#7c89a5;

    font-size:22px;

    letter-spacing:3px;

    font-family:'Orbitron',sans-serif;
}

.roomtext span{
    color:#19d3ff;
}

/* CLEAR BUTTON */

.clearbtn{
    width:110px;

    padding:14px;

    border:none;

    border-radius:14px;

    background:#08101d;

    color:white;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;
}

/* START */

.start{
    text-align:center;

    margin-top:14px;

    color:#7c89a5;

    letter-spacing:2px;

    font-size:12px;

    font-family:'Orbitron',sans-serif;
}

/* MESSAGE AREA */

#messages{
    width:100%;

    height:calc(100vh - 180px);

    overflow-y:auto;

    padding:22px;

    display:flex;
    flex-direction:column;
}

/* COMMON MESSAGE */

.message{
    max-width:260px;

    padding:12px 16px;

    margin-bottom:14px;

    border-radius:18px;

    line-height:1.5;

    font-size:15px;

    word-wrap:break-word;
}

/* OTHER USER */

.other{
    align-self:flex-start;

    background:#08101d;

    color:white;
}

/* YOUR MESSAGE */

.me{
    align-self:flex-end;

    background:black;

    border:1px solid #19d3ff;

    color:white;
}

/* USERNAME */

.username{
    font-size:12px;

    margin-bottom:6px;

    color:#19d3ff;

    font-weight:bold;

    font-family:Arial, Helvetica, sans-serif;
}

/* INPUT AREA */

.chat-input{
    position:fixed;

    bottom:14px;

    left:0;

    width:100%;

    display:flex;

    gap:12px;

    padding:0 14px;

    align-items:center;

    background:transparent;
}

/* CHAT INPUT */

.chat-input input{
    flex:1;

    height:58px;

    border:none;
    outline:none;

    border-radius:18px;

    background:#08101d;

    color:white;

    padding:0 20px;

    font-size:16px;
}

/* SEND BUTTON */

.chat-input button{
    width:120px;

    height:58px;

    border:none;

    border-radius:18px;

    background:#19d3ff;

    color:black;

    font-size:20px;

    font-weight:bold;

    cursor:pointer;

    font-family:'Orbitron',sans-serif;

    letter-spacing:2px;
}

/* MOBILE */

@media(max-width:768px){

    body{
        overflow:hidden;
    }

    .connect-card{
        width:92%;
        padding:28px;
        transform:scale(.95);
    }

    .logo{
        font-size:46px;
    }

    .desc{
        font-size:13px;
    }

    .topbar{
        height:72px;
        padding:0 16px;
    }

    .roomtext{
        font-size:18px;
    }

    #messages{
        padding:16px;
        height:calc(100vh - 165px);
    }

    .message{
        max-width:78%;
        font-size:14px;
    }

    .chat-input{
        bottom:8px;
        padding:0 8px;
    }

    .chat-input input{
        height:52px;
        font-size:14px;
    }

    .chat-input button{
        width:95px;
        height:52px;
        font-size:16px;
    }

}

